Update index.md
Updated tips for high-performance usage of TrakEM2 in Fiji.